Fixing ringo-standalone after changes in Oxalis.