@@ -16,7 +16,7 @@ import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.Date;
 
 import static org.easymock.EasyMock.*;
@@ -155,7 +155,7 @@ public class SendQueuedMessageUseCaseTest {
         MessageId messageId = new MessageId();
         byte[] nativeEvidenceBytes = "native evidence bytes".getBytes();
         byte[] remEvidenceBytes = "REM evidence bytes".getBytes();
-        expect(mockDocumentSender.sendDocument(mockMessage, messageXml)).andStubReturn(new PeppolDocumentSender.TransmissionReceipt(messageId, new URL("http://ringo.domain.com/"), new Date(),
+        expect(mockDocumentSender.sendDocument(mockMessage, messageXml)).andStubReturn(new PeppolDocumentSender.TransmissionReceipt(messageId, URI.create("http://ringo.domain.com/"), new Date(),
                 nativeEvidenceBytes));
 
         // update message to delivered
